--- a/CatetanNgutang/res/values-in/strings.xml
+++ b/CatetanNgutang/res/values-in/strings.xml
@@ -9,4 +9,5 @@
      <string name="text_owe">Hutang</string>
      <string name="text_amounttime">Waktu Bayar</string>
      <string name="button_save">Simpan</string>
+     <string name="noempty">Jangan sampai kosong harap di isi semua!</string> 
 </resources>
