--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Catang adalah applikasi catatan Hutang untuk android 
 
 Ini kok gak pernah ada update lagi Gus?
+
+belum kelar mbah yai masih ngonsep
