--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Catang adalah applikasi catatan Hutang untuk android
 Ini kok gak pernah ada update lagi Gus?
 
 belum kelar mbah yai masih ngonsep
+
+Wah, sayang tuh, lanjutin lah, mayan buat nyatet utang ane di warung :D
