--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Ini kok gak pernah ada update lagi Gus?
 belum kelar mbah yai masih ngonsep
 
 Wah, sayang tuh, lanjutin lah, mayan buat nyatet utang ane di warung :D
+
+wah iya nih semoga bisa kesampaian impian buat catetan ngutang di burjo :D
